fix newsletter signup form not showing on responsive close #17

--- a/sites/all/themes/bwhf/sass/pages/_news.scss
+++ b/sites/all/themes/bwhf/sass/pages/_news.scss
@@ -77,6 +77,16 @@
       background: url(../img/pulse.png) no-repeat center center;
       float: left;
       margin-right: 25px;
+      
+      @media screen and (max-width: 540px)
+      {
+        float: none;
+        margin-right: 0;
+        width: 100%;
+        height: 0;
+        padding-bottom: 40%;
+        background-size: contain;
+      }
     }
   }
   .mc-field-group
